[package]
name = "bifrostlink"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
bytes = "1.4.0"
derivative = "2.2.0"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
uuid = { version = "1.3.3", features = ["v4"] }
tokio = { version = "1.33.0", features = ["rt", "io-util", "process", "sync", "macros"] }
